[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34"
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
js-sys = "0.3.32"
console_error_panic_hook = "0.1.7"
rand = "0.8.0"
getrandom = { version = "0.2", features = ["js"] } 
[package.metadata.wasm-pack.profile.release]
wasm-opt = false